--- a/config/model_variation.yaml
+++ b/config/model_variation.yaml
@@ -4,7 +4,9 @@ grid_search:
   params:
     cv: 5
     verbose: 2
+
 model_selection:
+
   module_0:
     class: LinearRegression
     module: sklearn.linear_model
@@ -14,11 +16,17 @@ model_selection:
       fit_intercept:
       - true
       - false
+
   module_1:
     class: RandomForestRegressor
     module: sklearn.ensemble
     params:
-      min_samples_leaf: 3
+      min_samples_leaf: 2
     search_param_grid:
       min_samples_leaf:
+      - 4
       - 6
+      - 12
+      n_estimators:
+      - 100
+      - 200
